--- a/src/Container/Navbar.css
+++ b/src/Container/Navbar.css
@@ -1,21 +1,21 @@
 .navbar{
-    background-color: rgb(4, 235, 158);
+    background-color: rgba(4, 235, 158, 0.822);
     padding: 1px;
     display: inline-flex;
     width: 100%;
-    box-shadow: 1px 2px 3px rgba(2, 246, 34, 0.637);
+    box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.349);
 }
 
 p{
     padding: 10px;
-    margin-left: 20px;
-    background-color: rgb(108, 196, 255);
+    margin-left: 100px;
+    background-color: rgba(108, 196, 255, 0.883);
     width: 100px;
     border-radius: 5px;
     opacity: 0.9;
     transition: 0.3s;
     cursor: default;
-    box-shadow: 1px 2px 3px rgba(6, 6, 255, 0.541);
+    box-shadow: 1px 2px 3px rgba(8, 8, 36, 0.541);
     
 }
 
