--- a/src/Container/Card.css
+++ b/src/Container/Card.css
@@ -1,26 +1,34 @@
 .Card {
-  min-width: 180px;
-  min-height: 150px;
+  min-width: 200px;
+  min-height: 180px;
   margin: 2%;
   border: 1px solid #eee;
   box-shadow: 1px 2px 3px #ccc;
   padding: 2px;
-  font-size: 30px;
+  font-size: 25px;
   text-align: center;
   display: flex;
+  flex-direction: column;
   background-color: rgba(145, 209, 136, 0.507);
   cursor: pointer;
   border-radius: 15px;
 }
 
 .img{
-  width: 240px;
+  width: 250px;
   height: 200px;
-  opacity: 0.9;
-  transition: 0.4s;
+  border-radius: 15px;
 }
 
-.img:hover {
-  opacity: 1;
-  background-color: rgba(145, 209, 136, 0.815);
+
+
+.Card:hover{
+background-color: rgba(34, 202, 12, 0.472);
+}
+
+h3{
+  font-size: 24px;
+  color:  rgb(255, 255, 255);
+  background-color: rgba(14, 3, 3, 0.472);
+  padding: 12px;
 }
