--- a/src/Container/Navbar.css
+++ b/src/Container/Navbar.css
@@ -7,14 +7,16 @@
 }
 
 p{
-    padding: 10px;
+    padding: 8px;
     margin-left: 100px;
     background-color: rgba(108, 196, 255, 0.883);
-    width: 100px;
+    width: 150px;
+    font-weight: bold;
     border-radius: 5px;
-    opacity: 0.9;
+    opacity: 0.8;
     transition: 0.3s;
     cursor: default;
+    font-size: 22px;
     box-shadow: 1px 2px 3px rgba(8, 8, 36, 0.541);
     
 }
