--- a/src/Container/Navbar.css
+++ b/src/Container/Navbar.css
@@ -9,7 +9,8 @@
 p{
     padding: 8px;
     margin-left: 100px;
-    background-color: rgba(108, 196, 255, 0.883);
+    background-color: rgb(0, 0, 0);
+    color: white;
     width: 150px;
     font-weight: bold;
     border-radius: 5px;
