--- a/src/Container/Card.css
+++ b/src/Container/Card.css
@@ -1,6 +1,7 @@
 .Card {
   min-width: 200px;
   min-height: 180px;
+  max-width: 350px;
   margin: 2%;
   border: 1px solid #eee;
   box-shadow: 1px 2px 3px #ccc;
