--- a/src/Container/Card.css
+++ b/src/Container/Card.css
@@ -1,7 +1,7 @@
 .Card {
   min-width: 200px;
   min-height: 180px;
-  max-width: 350px;
+  max-width: 250px;
   margin: 2%;
   border: 1px solid #eee;
   box-shadow: 1px 2px 3px #ccc;
@@ -16,8 +16,9 @@
 }
 
 .img{
-  width: 250px;
-  height: 200px;
+  min-width: 200px;
+  min-height: 180px;
+  max-width: 250px;
   border-radius: 15px;
 }
 
