--- a/src/Container/Search.css
+++ b/src/Container/Search.css
@@ -48,7 +48,8 @@ border-radius: 10px;
 
 .fa-search {
     color: white;
-
+    font-size: 16px;
+    padding: 0;
 }
 
 .bt {
@@ -57,6 +58,5 @@ border-radius: 10px;
     border: 1px solid rgb(151, 151, 151);
     outline: none;
     font-size: medium;
-    padding: 12px;
     margin-left: 3px;
 }
