--- a/src/Container/Navbar.css
+++ b/src/Container/Navbar.css
@@ -1,6 +1,6 @@
 .navbar{
     background-color: rgba(4, 235, 158, 0.822);
-    padding: 1px;
+    padding: 0;
     display: inline-flex;
     width: 100%;
     box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.349);
