--- a/src/Container/Navbar.css
+++ b/src/Container/Navbar.css
@@ -1,6 +1,7 @@
 .navbar{
     background-color: rgba(4, 235, 158, 0.822);
     padding: 0;
+    margin: 0;
     display: inline-flex;
     width: 100%;
     box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.349);
@@ -8,7 +9,7 @@
 
 p{
     padding: 8px;
-    margin-left: 100px;
+    margin: 14px  8px  14px 100px;
     background-color: rgb(0, 0, 0);
     color: white;
     width: 150px;
@@ -17,9 +18,8 @@ p{
     opacity: 0.8;
     transition: 0.3s;
     cursor: default;
-    font-size: 22px;
+    font-size: 21px;
     box-shadow: 1px 2px 3px rgba(8, 8, 36, 0.541);
-    
 }
 
 p:hover {
