--- a/src/Container/Search.css
+++ b/src/Container/Search.css
@@ -41,15 +41,15 @@ border-radius: 10px;
 .wrap{
   width: 30%;
   position: absolute;
-  top: 16%;
+  top: 13%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
 
 .fa-search {
     color: white;
-    font-size: 16px;
-    padding: 0;
+    font-size: 20px;
+    padding: 5px;
 }
 
 .bt {
@@ -59,4 +59,5 @@ border-radius: 10px;
     outline: none;
     font-size: medium;
     margin-left: 3px;
+    cursor: pointer;
 }
