--- a/src/Container/Container.css
+++ b/src/Container/Container.css
@@ -1,9 +1,10 @@
-.Container{
-    width: 80%;
-    margin-left: 10%;
-    display: inline-flex;
+.Container {
+    width: 60%;
+    display: flex;
     flex-wrap: wrap;
-    margin-top: 70px;
-   text-align: center;
-   justify-content: center;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    margin: auto;
+    margin-top: 90px;
 }
