--- a/src/Container/Card.css
+++ b/src/Container/Card.css
@@ -1,40 +1,41 @@
 .Card {
-  min-width: 200px;
-  min-height: 180px;
-  max-width: 250px;
-  margin: 2%;
+  min-width: 130px;
+  min-height: 90px;
+  max-width: 180px;
+  max-height: 200px;
+  margin: 1.8%;
   border: 1px solid #eee;
   box-shadow: 1px 2px 3px #ccc;
-  padding: 2px;
   font-size: 25px;
   text-align: center;
   display: flex;
   flex-direction: column;
-  background-color: rgba(145, 209, 136, 0.507);
+  background-color: rgba(145, 209, 136, 0.712);
   cursor: pointer;
   border-radius: 15px;
 }
 
-.img{
-  min-width: 200px;
-  min-height: 180px;
-  max-width: 250px;
+.img {
+  width: 92%;
+  height: 70%;
+  max-width: 150px;
+  max-height: 120px;
   border-radius: 15px;
 }
 
 
 
-.Card:hover{
-background-color: rgba(34, 202, 12, 0.472);
+.Card:hover {
+  background-color: rgba(34, 202, 12, 0.472);
 }
 
-h3{
-  font-size: 24px;
-  color:  rgb(255, 255, 255);
+h3 {
+  font-size: 18px;
+  color: rgb(255, 255, 255);
   background-color: rgba(14, 3, 3, 0.472);
   padding: 12px;
 }
 
-a{
+a {
   text-decoration: none;
 }
