--- a/src/Container/Card.css
+++ b/src/Container/Card.css
@@ -13,6 +13,7 @@
   background-color: rgba(145, 209, 136, 0.712);
   cursor: pointer;
   border-radius: 15px;
+  transition: 0.3s;
 }
 
 .img {
@@ -27,6 +28,7 @@
 
 .Card:hover {
   background-color: rgba(34, 202, 12, 0.472);
+  transform: scale(1.1);
 }
 
 h3 {
