--- a/src/Container/Search.css
+++ b/src/Container/Search.css
@@ -37,11 +37,11 @@ body {
 }
 
 .wrap {
-  width: 28%;
-  position: absolute;
-  top: 18%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  margin: auto;
+  margin-top: 20px;
+  width: 30%;
+  min-width: 300px;
+  max-width: 500px;
 }
 
 .fa-search {
